Fix alignment issues on other profiles

--- a/apps/frontend/src/app/pages/profile/profile.component.scss
+++ b/apps/frontend/src/app/pages/profile/profile.component.scss
@@ -1,149 +1,162 @@
 .top-wrapper {
-    --top-height: 200px;
-    --image-factor: 0.4;
-    --image-size: calc(var(--top-height) * var(--image-factor));
+  --top-height: 200px;
+  --image-factor: 0.4;
+  --image-size: calc(var(--top-height) * var(--image-factor));
 
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 
-    width: 100vw;
-    height: var(--top-height);
-    background: linear-gradient(90deg, rgba(131, 58, 180, 0.85) 0%, rgba(253, 29, 29, 0.85) 50%, rgba(252, 176, 69, 0.85) 100%);
+  width: 100vw;
+  height: var(--top-height);
+  background: linear-gradient(90deg, rgba(131, 58, 180, 0.85) 0%, rgba(253, 29, 29, 0.85) 50%, rgba(252, 176, 69, 0.85) 100%);
 
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: center;
+  position: relative;
 
-    i {
-        align-self: start;
-        color: white;
-        font-size: min(1.75em, 2rem);
-        margin: 0.5em;
-    }
+  i {
+    align-self: start;
+    color: white;
+    font-size: min(1.75em, 2rem);
+    margin: 0.5em;
+  }
+}
+
+.top-wrapper > .fa-arrow-left {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.top-wrapper > .fa-ellipsis-vertical {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .profile-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-height: var(--top-height);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-height: var(--top-height);
 }
 
 .profile-container > * {
-    margin: 0.5em;
+  margin: 0.5em;
 }
 
 .avatar-container {
-    position: relative;
+  position: relative;
 
-    img,
-    button {
-        height: var(--image-size);
-        width: var(--image-size);
-        border-radius: calc(var(--image-size) * 0.5);
-        margin: 0;
-        padding: 0;
+  img,
+  button {
+    height: var(--image-size);
+    width: var(--image-size);
+    border-radius: calc(var(--image-size) * 0.5);
+    margin: 0;
+    padding: 0;
 
-        border: none;
-        outline: 1px solid white;
-    }
+    border: none;
+    outline: 1px solid white;
+  }
 
-    img {
-        object-fit: cover;
-    }
+  img {
+    object-fit: cover;
+  }
 
-    input[type='file'] {
-        display: none;
-    }
+  input[type='file'] {
+    display: none;
+  }
 
-    button {
-        position: absolute;
-        opacity: 0;
-        background-color: rgba(90, 90, 90, 0.6);
-        cursor: pointer;
-        top: 0;
-        left: 0;
-    }
+  button {
+    position: absolute;
+    opacity: 0;
+    background-color: rgba(90, 90, 90, 0.6);
+    cursor: pointer;
+    top: 0;
+    left: 0;
+  }
 }
 
 .avatar-container:hover > button {
-    opacity: 1;
+  opacity: 1;
 }
 
 .name-container > form {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    input {
-        width: 100%;
-        margin: 0.15em;
-    }
+  input {
+    width: 100%;
+    margin: 0.15em;
+  }
 }
 
 .edit-menu {
-    margin: 0.15em;
+  margin: 0.15em;
 
-    :first-child {
-        margin-right: 0.25em;
-    }
+  :first-child {
+    margin-right: 0.25em;
+  }
 
-    i {
-        color: white;
-        margin: 0;
-    }
+  i {
+    color: white;
+    margin: 0;
+  }
 }
 
 .error-message {
-    color: rgba(123, 6, 6, 0.8);
-    font-size: 1em;
-    font-weight: 400;
-    display: inline;
-    margin: 0;
-    font-style: italic;
+  color: rgba(123, 6, 6, 0.8);
+  font-size: 1em;
+  font-weight: 400;
+  display: inline;
+  margin: 0;
+  font-style: italic;
 }
 
 input {
-    background-color: hsla(0, 0%, 70%, 0.5);
-    border-radius: 5px;
-    color: hsl(0, 0%, 0%);
-    border: 1px solid hsla(0, 0%, 60%, 0.5);
+  background-color: hsla(0, 0%, 70%, 0.5);
+  border-radius: 5px;
+  color: hsl(0, 0%, 0%);
+  border: 1px solid hsla(0, 0%, 60%, 0.5);
 }
 
 input:disabled {
-    background: transparent;
-    border: none;
-    font-size: 1.1em;
+  background: transparent;
+  border: none;
+  font-size: 1.1em;
 }
 
 .posts-wrapper {
-    margin-top: 1em;
+  margin-top: 1em;
 }
 
-@media (min-width: 400px){
-    .top-wrapper{
-        font-size: 1.1rem;
-    }
+@media (min-width: 400px) {
+  .top-wrapper {
+    font-size: 1.1rem;
+  }
 }
 
-@media (min-width: 600px){
-    .top-wrapper{
-        font-size: 1.25rem;
-        --top-height: 150px;
-        --image-factor: 0.8;
-    }
+@media (min-width: 600px) {
+  .top-wrapper {
+    font-size: 1.25rem;
+    --top-height: 150px;
+    --image-factor: 0.8;
+  }
 }
 
-@media (min-width: 800px){
-    .top-wrapper{
-        font-size: 1.5rem;
-        --top-height: 150px;
-        --image-factor: 0.8;
-    }
+@media (min-width: 800px) {
+  .top-wrapper {
+    font-size: 1.5rem;
+    --top-height: 150px;
+    --image-factor: 0.8;
+  }
 }
 
-@media (min-width: 1000px){
-    .top-wrapper{
-        font-size: 1.9rem;
-        --top-height: 175px;
-        --image-factor: 0.85;
-    }
+@media (min-width: 1000px) {
+  .top-wrapper {
+    font-size: 1.9rem;
+    --top-height: 175px;
+    --image-factor: 0.85;
+  }
 }
